; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_f.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_cache = type { i32 }
%struct.sc_uniform = type { i8*, %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { float* }
%struct.TYPE_3__ = type { i32 }

@RA_VARTYPE_FLOAT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"float\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_sc_uniform_f(%struct.gl_shader_cache* %0, i8* %1, float %2) #0 {
  %4 = alloca %struct.gl_shader_cache*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca float, align 4
  %7 = alloca %struct.sc_uniform*, align 8
  store %struct.gl_shader_cache* %0, %struct.gl_shader_cache** %4, align 8
  store i8* %1, i8** %5, align 8
  store float %2, float* %6, align 4
  %8 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache* %8, i8* %9)
  store %struct.sc_uniform* %10, %struct.sc_uniform** %7, align 8
  %11 = load i32, i32* @RA_VARTYPE_FLOAT, align 4
  %12 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %13 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 8
  %15 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %16 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %15, i32 0, i32 0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %16, align 8
  %17 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %4, align 8
  %18 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %19 = call i32 @update_uniform_params(%struct.gl_shader_cache* %17, %struct.sc_uniform* %18)
  %20 = load float, float* %6, align 4
  %21 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %22 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load float*, float** %23, align 8
  %25 = getelementptr inbounds float, float* %24, i64 0
  store float %20, float* %25, align 4
  ret void
}

declare dso_local %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache*, i8*) #1

declare dso_local i32 @update_uniform_params(%struct.gl_shader_cache*, %struct.sc_uniform*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
